<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RDM - Trip Manager</string>
    <string name="action_settings">Регистрация</string>
    <string name="logo">Logo</string>
    <string name = "profile_topic">Моят Профил</string>
    <string name="user">Потребител</string>
    <string name="password">Парола</string>
    <string name="submit_btn">Вход</string>
    <string name="footer">Team MickeyMouse</string>
    <string name="reg_user">Потребителско име</string>
    <string name="reg_pass">Парола</string>
    <string name = "sign_up_btn">Регистрация</string>
    <string name="reg_confPass">Повтори парола</string>
    <string name="reg_email">Email</string>
    <string name="reg_btn">Регистрирай се</string>
    <string name="everlive_key">JXf8myCowKXQg50U</string>
    <string name="progress_login">Зареждане..</string>
    <string name="profile_pic">Profile picture</string>
    <string name="edit_btn">Промени</string>
    <string name="search_btn">Търси</string>
    <string name="create_btn">Създай маршрут</string>
    <string name="make_from">От</string>
    <string name="make_to">До</string>
    <string name="make_date">Дата</string>
    <string name="make_time">Час</string>
    <string name="name">Име</string>
    <string name = "progress_register">Създаване на акаунт..</string>
    <string name = "register_onsucceed">Акаунта е създаден успешно!</string>
    <string name = "tab_create_trip">Ново пътуване</string>
    <string name = "tab_find_trip">Търсене</string>
    <string name = "tab_profile">Профил</string>
    <string name = "login_error">Грешно въведено име или парола!</string>
    <string name = "register_error">Неуспешна регистрация!</string>
    <string name="my_trips_btn">Мои маршрути</string>
    <string name = "joined_trips_btn">Присъединил съм се към..</string>
</resources>
