<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:background="@drawable/gradient_demo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >
        
         <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dp"
           android:text="@string/create_btn"
           android:textSize="30sp"
           android:textColor="#0A5688"
           android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
            android:id="@+id/etMakeFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_top"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/make_from"
            android:padding="10dp"
            android:textColorHint="#93bad3" />
        
        <EditText
            android:id="@+id/etMakeTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_top"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/make_to"
            android:padding="10dp"
            android:textColorHint="#93bad3" />

        <EditText
            android:id="@+id/etMakeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_top"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/make_date"
            android:textColorHint="#93bad3"
            android:inputType="date" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etMakeTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_top"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/make_time"
            android:textColorHint="#93bad3"
            android:inputType="time" />
        
        <Button
            android:id="@+id/makeBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/edit_btn"
            android:text="@string/create_btn"
            android:textColor="#0A5688" />

    </LinearLayout>

</ScrollView>
