<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient_demo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_height="fill_parent" >
    
    <TextView
           android:id="@+id/search_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dp"
           android:text="@string/tab_find_trip"
           android:textSize="30sp"
           android:layout_marginTop="80dp"
           android:textColor="#0A5688"
           android:layout_gravity="center"
           android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <EditText
            android:id="@+id/search_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_top"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/make_from"
            android:padding="10dp"
            android:textColorHint="#93bad3" />

        <EditText
            android:id="@+id/search_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:background="@drawable/edit_top"
            android:ems="10"
            android:hint="@string/make_to"
            android:padding="10dp"
            android:textColorHint="#93bad3" >


        </EditText>

        <Button
            android:id="@+id/search"
           android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/edit_btn"
            android:text="@string/search_btn"
            android:textColor="#0A5688"
            android:layout_gravity="center"
             />

</LinearLayout>
